--- a/apps/stock-data-processor/Dockerfile
+++ b/apps/stock-data-processor/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.10-slim-buster
 
-WORKDIR /app
+WORKDIR app
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
-COPY . .
+COPY src .
 CMD ["python3", "-u", "app.py"]
