--- a/apps/stock-data-fetcher/Dockerfile
+++ b/apps/stock-data-fetcher/Dockerfile
@@ -11,5 +11,6 @@ ENV LC_ALL en_US.UTF-8
 WORKDIR app
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
-COPY src .
-CMD ["python3", "-u", "app.py"]
+COPY src src
+COPY __main__.py __main__.py
+CMD ["python3", "-u", "__main__.py"]
