--- a/apps/stock-data-processor/Dockerfile
+++ b/apps/stock-data-processor/Dockerfile
@@ -3,5 +3,6 @@ FROM python:3.10-slim-buster
 WORKDIR app
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
-COPY src .
-CMD ["python3", "-u", "app.py"]
+COPY src src
+COPY __main__.py __main__.py
+CMD ["python3", "-u", "__main__.py"]
